feat: add swagger documentation to the invoice controller.
